RESOLVED FIXED36862
Notifications should not resolve an empty icon parameter as a relative URL
https://bugs.webkit.org/show_bug.cgi?id=36862
Summary Notifications should not resolve an empty icon parameter as a relative URL
John Gregg
Reported 2010-03-30 16:17:25 PDT
Currently if a notification is created with empty icon parameter, the URL will be resolved relative to the current document URL, whereas it should remain empty.
Attachments
Patch (1.19 KB, patch)
2010-03-30 16:41 PDT, John Gregg
no flags
Patch (3.46 KB, patch)
2010-04-02 16:58 PDT, John Gregg
no flags
John Gregg
Comment 1 2010-03-30 16:17:45 PDT
Also, this was a recent regression.
John Gregg
Comment 2 2010-03-30 16:41:09 PDT
Dmitry Titov
Comment 3 2010-04-01 12:41:07 PDT
Comment on attachment 52099 [details] Patch > Index: WebCore/ChangeLog > + > + No new tests, code is disabled in WebKit. This looks like something that has to be covered by a test. Especially if this is a recent regression, as you say in the bug. The ENABLE_NOTIFICATIONS is enabled in Chromium, so perhaps there is a way to have a test running at least in chromium port? Removing r? for now, feel free to flip back if there is a test or if it is plain impossible to have one.
John Gregg
Comment 4 2010-04-02 16:58:37 PDT
John Gregg
Comment 5 2010-04-02 17:01:58 PDT
Okay, I'm adding a test for this. All the notifications tests are disabled on all platforms pending patches to add the necessary hooks in DumpRenderTree/test_shell, so I'll add this one disabled as well. I have the testing hooks mostly done and can push that through soon, but since this is a regression it would be nice if we could land it with the placeholder test for now.
WebKit Commit Bot
Comment 6 2010-04-02 17:43:47 PDT
Comment on attachment 52468 [details] Patch Rejecting patch 52468 from commit-queue. johnnyg@google.com does not have committer permissions according to http://trac.webkit.org/browser/trunk/WebKitTools/Scripts/webkitpy/common/config/committers.py. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in WebKitTools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). Due to bug 30084 the commit-queue will require a restart after your change. Please contact eseidel@chromium.org to request a commit-queue restart. After restart the commit-queue will correctly respect your committer rights.
WebKit Commit Bot
Comment 7 2010-04-05 16:55:05 PDT
Comment on attachment 52468 [details] Patch Clearing flags on attachment: 52468 Committed r57103: <http://trac.webkit.org/changeset/57103>
WebKit Commit Bot
Comment 8 2010-04-05 16:55:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.