2010-04-05  John Gregg  <johnnyg@google.com>

Reviewed by Darin Adler.

        Notifications should not resolve an empty icon parameter as a relative URL
        https://bugs.webkit.org/show_bug.cgi?id=36862

        * fast/notifications/notifications-no-icon-expected.txt: Added.
        * fast/notifications/notifications-no-icon.html-disabled: Added.
2010-04-05  John Gregg  <johnnyg@google.com>

        Reviewed by Darin Adler.

        Notifications should not resolve an empty icon parameter as a relative URL
        https://bugs.webkit.org/show_bug.cgi?id=36862

        * notifications/Notification.cpp:
        (WebCore::Notification::Notification):

Canonical link: https://commits.webkit.org/48396@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57103 268f45cc-cd09-0410-ab3c-d52691b4dbfc